--- a/Module_6_PandasII.ipynb
+++ b/Module_6_PandasII.ipynb
@@ -24,14 +24,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Changing shape\n",
-    "# Plotting"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -108,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -249,6 +241,40 @@
     "\n",
     "subsetdf = df.loc[:, ['cond1exp']]\n",
     "print(subsetdf.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     100\n",
+      "1      50\n",
+      "2      40\n",
+      "3      20\n",
+      "4       1\n",
+      "5    1000\n",
+      "Name: cond1exp, dtype: int64 \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "[100, 50, 40, 20, 1, 1000]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Asking for the column name as a string rather than within a list returns a numpy array instead of a one-column dataframe\n",
+    "#This allows us to easily turn the values into a list\n",
+    "\n",
+    "subsetdf = df.loc[:, 'cond1exp'] #notice cond1exp is a string, not contained within a list\n",
+    "print(subsetdf,  '\\n\\n\\n\\n')\n",
+    "subsetdf = subsetdf.tolist() #turn into list\n",
+    "print(subsetdf)"
    ]
   },
   {
