--- a/Final_Projects.ipynb
+++ b/Final_Projects.ipynb
@@ -33,17 +33,27 @@
     "\n",
     "*As an aside, we know which exons are enhanced by RBFOX2 and which are not by analyzing splicing transcriptome-wide in cells that we treated with either RBFOX2 siRNA or control siRNA.*\n",
     "\n",
-    "We would expect that the kmer that RBFOX2 is recognizing would be enriched in introns downstream of \"affected\" exons relative to the introns downstream of \"control\" exons.  It just so happens that we have made fasta files containing intronic sequences downstream of both exon classes."
+    "We would expect that the kmer that RBFOX2 is recognizing would be enriched in introns downstream of \"affected\" exons relative to the introns downstream of \"control\" exons.  It just so happens that we have made fasta files containing intronic sequences downstream of both exon classes.  You can download them from the links below.\n",
+    "\n",
+    "[Enhanced](https://github.com/srinivasramachandran/Anschutz_python/blob/master/DownstreamIntron.Enhanced.fasta)\n",
+    "\n",
+    "[Control](https://github.com/srinivasramachandran/Anschutz_python/blob/master/DownstreamIntron.Control.fasta)\n",
+    "\n",
+    "> For the splicing afficionados out there, these files are actually of the last 50 nt of each exon and the first 150 nt of the downstream intron.\n",
+    "\n",
+    "What we would like to do is write code that compares the sequence content of the two files and identifies 6-mers that are enriched in the \"Enhanced\" file relative to the \"control\" file.  This can be done with the following approach:\n",
+    "\n",
+    "1.  Go through each file and count the number of occurences of each 6-mer.  This might be best stored as a dictionary of the form {kmer : number of occurences}.\n",
+    "2.  Calculate an enrichment for each for each kmer in the affected relative to control by dividing the frequency of the kmer in the affected sequences to its frequency in control sequences.  Remember that the frequency of a kmer is that number of occurences of that kmer divided by the number of occurences of all kmers.  Frequencies must be between 0 and 1.\n",
+    "3.  Calculate the statistical significance of that enrichment with a Fisher's exact test.  This can be done by importing the fisher_exact function from the scipy.stats module.  See the [documentation](http://lagrange.univ-lyon1.fr/docs/scipy/0.17.1/generated/scipy.stats.fisher_exact.html) for fisher_exact for help.\n",
+    "4.  Correct your Fisher's exact p-values for multiple hypothesis testing with a Bonferroni correction.  Very simply, multiply your original pvalue from fisher_exact by the number of kmers you are considering (there are 4096 possible 6mers).\n",
+    "5. Sort kmers by their corrected pvalues.\n",
+    "6. Write a file with the following columns for every kmer:\n",
+    "      kmer, enrichment, uncorrected pvalue, corrected pvalue\n",
+    "      \n",
+    "\n",
+    "Perhaps the best way to tackle this would be to write an independent function for each one of the numbered tasks above.  This keeps your code neat and readable."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
