--- a/Module_1_Var_Dt_etc.ipynb
+++ b/Module_1_Var_Dt_etc.ipynb
@@ -24,12 +24,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "a_number = 2\n",
-    "another_number = 4\n",
-    "a_phrase = \"I am learning python\""
+    "a_number = 2 # integer\n",
+    "another_number = 4 # integer\n",
+    "a_phrase = \"I am learning python\" # string"
    ]
   },
   {
@@ -42,7 +44,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "a_number"
@@ -58,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "not_assigned"
@@ -74,7 +80,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "not_assigned = 'I will assign variables before using them'\n",
@@ -91,7 +99,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "print(type(a_number))\n",
@@ -108,15 +118,235 @@
     "\n",
     "- Number \n",
     "- String\n",
+    "- List - Module 2\n",
     "- Tuple - Module 2\n",
-    "- Dictionory - Module 2"
+    "- Dictionory - Module 2\n",
+    "\n",
+    "## Numbers in python\n",
+    "- Integer\n",
+    "- Long (We won't use them)\n",
+    "- Float - decimal number\n",
+    "- Complex (We won't use them)\n",
+    "\n",
+    "### Assigning/changing number type\n",
+    "\n",
+    "By default, python looks at the number and assigns a type. You can also specify the type explicitly."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "is_it_a_float = 10.0\n",
+    "type(is_it_a_float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "is_it_a_float = 10\n",
+    "type(is_it_a_float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "it_is_a_float = float(is_it_a_float)\n",
+    "it_is_a_float"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "type(it_is_a_float)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Strings\n",
+    "#### Strings are very important variable type for our purposes. Why?\n",
+    "\n",
+    "String is just a set of characters enclosed by quotation marks. We can manipulate strings in many ways with python that is powerful and very useful in a variety of contexts. \n",
+    "\n",
+    "- String is just an list of characters, each having an index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a_string = \"Bunch of Characters\"\n",
+    "print(a_string[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(a_string[0:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(a_string[5:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### String concatenation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "second_string = \" in a movie\"\n",
+    "sentence = a_string + second_string\n",
+    "sentence"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "String manipulation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Operators\n",
+    "- Addition: +\n",
+    "- Subtraction: -\n",
+    "- Division: /\n",
+    "- Multiplication: \\*\n",
+    "- Exponentiation: \\**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Addition: 1 + 2 =\",1+2)\n",
+    "print(\"Subtraction: 2 - 1 =\",2-1)\n",
+    "print(\"Division: 10/3 =\",10/3) \n",
+    "print(\"Multiplication: 10*3 =\",10*3)\n",
+    "print(\"Exponentiation: 5**2 =\",5**2)\n",
+    "print(\"Exponentiation: 4**0.5 =\",4**0.5)\n",
+    "print(\"Exponentiation: 4**-1 =\",4**-1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Some useful math functions similar to operators:\n",
+    "- round()\n",
+    "- abs()\n",
+    "With math module:\n",
+    "- pi - value of the constant pi\n",
+    "- https://docs.python.org/2/library/math.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(math.pi)\n",
+    "print(abs(-1.2))\n",
+    "print(round(1.2))\n",
+    "print(round(1.23232,2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Boolean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Conditional Statements"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -130,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
