--- a/Module_2_DataStructures.ipynb
+++ b/Module_2_DataStructures.ipynb
@@ -56,13 +56,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "fruits = ['banana', 'orange', 'apple', 'kiwi']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['banana', 'orange', 'apple', 'kiwi']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits"
    ]
   },
   {
@@ -74,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +103,7 @@
        "'apple'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +130,7 @@
        "'banana'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +184,7 @@
        "['banana', 'orange', 'grape', 'kiwi']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +220,7 @@
        "['banana', 'orange']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -221,7 +241,7 @@
        "['orange', 'grape', 'kiwi']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,14 +363,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['banana', 'orange', 'grape', 'kiwi']\n",
+      "['kiwi', 'grape', 'orange', 'banana']\n",
+      "<list_reverseiterator object at 0x10a31a278>\n",
       "['kiwi', 'grape', 'orange', 'banana']\n",
       "['banana', 'orange', 'grape', 'kiwi']\n"
      ]
@@ -361,7 +382,7 @@
     "print(fruits)\n",
     "\n",
     "#This modifies the list in place so that when you ask for it again...\n",
-    "fruits.reverse()\n",
+    "reversedfruits = reversed(fruits)\n",
     "#you get back the reversed list\n",
     "print(fruits)\n",
     "\n",
@@ -383,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -613,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -621,13 +642,17 @@
      "output_type": "stream",
      "text": [
       "['apple', 'orange', 'grape', 'banana']\n",
-      "['apple', 'orange', 'grape', 'banana', 'tomato']\n"
+      "['apple', 'orange', 'grape', 'banana', ['lime', 'lemon']]\n",
+      "['apple', 'orange', 'grape', 'banana', ['lime', 'lemon'], 'tomato']\n"
      ]
     }
    ],
    "source": [
     "#Our friends, the fruits\n",
     "fruits = ['apple', 'orange', 'grape', 'banana']\n",
+    "print(fruits)\n",
+    "otherfruits = ['lime', 'lemon']\n",
+    "fruits.append(otherfruits)\n",
     "print(fruits)\n",
     "\n",
     "#But wait!  Tomatoes are fruits too!\n",
@@ -637,14 +662,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['apple', 'orange', 'grape', 'banana', 'lime', 'mango', 'blueberry', 'watermelon']\n"
+      "['apple', 'orange', 'grape', 'banana', 'lemon']\n"
      ]
     }
    ],
@@ -652,7 +677,9 @@
     "fruits = ['apple', 'orange', 'grape', 'banana']\n",
     "alsofruits = ['lime', 'mango', 'blueberry', 'watermelon']\n",
     "\n",
-    "fruits.extend(alsofruits)\n",
+    "#fruits.extend(alsofruits)\n",
+    "lemonlist = ['lemon']\n",
+    "fruits = fruits + lemonlist\n",
     "\n",
     "print(fruits)"
    ]
@@ -735,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -743,6 +770,23 @@
    "source": [
     "fruitlist = ['apple', 'orange', 'grape', 'banana']\n",
     "fruittuple = ('apple', 'orange', 'grape', 'banana')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apple', 'orange', 'grape', 'banana']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(fruittuple))"
    ]
   },
   {
@@ -1073,6 +1117,7 @@
     "\n",
     "#Also, he told me that actually his third favorite thing is introns, not polyAtails.\n",
     "instructor['fav_things'][2] = 'introns'\n",
+    "instructor['fav_things'].app\n",
     "\n",
     "print(instructor)"
    ]
@@ -1288,23 +1333,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Exercise 3\n",
+    "### Exercise 4\n",
     "\n",
-    "Consider the following list.  It's nasty.\n",
+    "Given this dictionary:\n",
     "\n",
-    "    mydict = [{'Colorado' : 'Denver', 'New Mexico' : 'Santa Fe', 'Kansas' : 'Topeka'},\n",
-    "    100,\n",
-    "    200,\n",
-    "    300,\n",
-    "    ['hat', 'tshirt', 'jeans', {'socks1': 'red', 'socks2' : 'blue'}]]\n",
-    "    \n",
-    "Print the following items:\n",
-    "1.  2000\n",
-    "2.  The dictionary of cities and states.\n",
-    "3.  The list of clothes.\n",
-    "4.  The word 'Santa Fe'.\n",
-    "5.  The word 'jeans'.\n",
-    "6.  The word 'blue'."
+    "inventory = {\n",
+    "    'gold' : 500,\n",
+    "    'pouch' : ['flint', 'twine', 'gemstone'],\n",
+    "    'backpack' : ['xylophone','dagger', 'bedroll','bread loaf']\n",
+    "}\n",
+    "\n",
+    "Perform the following actions.\n",
+    "1.  Add a key to inventory called 'pocket'.\n",
+    "2.  Set the value of 'pocket' to be a list consisting of the strings 'seashell', 'strange berry', and 'lint'.\n",
+    "3.  Sort the items in the lsit stored under the 'backpack' key.\n",
+    "4.  Remove 'dagger' from the list of items sotred in the 'backpack' key.\n",
+    "5.  Add 50 to the number stored in the 'gold' key."
    ]
   },
   {
@@ -1315,7 +1359,13 @@
    },
    "outputs": [],
    "source": [
-    "### PUT YOUR CODE HERE\n",
+    "#PUT YOUR CODE HERE\n",
+    "\n",
+    "inventory = {\n",
+    "    'gold' : 500,\n",
+    "    'pouch' : ['flint', 'twine', 'gemstone'],\n",
+    "    'backpack' : ['xylophone','dagger', 'bedroll','bread loaf']\n",
+    "}\n",
     "\n"
    ]
   }
