Fix Mods 3, 4, and 6

--- a/Module_3_Loops.ipynb
+++ b/Module_3_Loops.ipynb
@@ -66,17 +66,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apples', 'oranges', 'grapes', 'bananas']\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
     "#Add each modified item to a new list\n",
     "fruits = ['apple', 'orange', 'grape', 'banana']\n",
@@ -105,7 +99,7 @@
     "\n",
     "Loops can therefore have this common structure:\n",
     "\n",
-    "    for item in iterable:\n",
+    "    for *item* in *iterable*:\n",
     "        if condition is met:\n",
     "            do this thing\n",
     "        else:\n",
@@ -113,7 +107,7 @@
     "            \n",
     "Multiple conditions can be presented in sequence.  This is commonly done by combining *else* and *if* statements into a single statement called *elif* (else-if). This will now look like this:\n",
     "\n",
-    "    for item in iterable:\n",
+    "    for *item* in *iterable*:\n",
     "        if condition1 is met:\n",
     "            do action1\n",
     "        elif condition2 is met:\n",
@@ -233,36 +227,11 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I love big apples!!\n",
-      "I love juicy apples!!\n",
-      "I love delicious apples!!\n",
-      "I love big oranges!!\n",
-      "I love juicy oranges!!\n",
-      "I love delicious oranges!!\n",
-      "I love big grapes!!\n",
-      "I love juicy grapes!!\n",
-      "I love delicious grapes!!\n",
-      "I love big bananas!!\n",
-      "I love juicy bananas!!\n",
-      "I love delicious bananas!!\n"
-     ]
-    }
-   ],
-=======
    "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
->>>>>>> b730767d90ac1d72ce498821b9b35dea0e042bd5
    "source": [
     "adjectives = ['big', 'juicy', 'delicious']\n",
     "fruits = ['apples', 'oranges', 'grapes', 'bananas']\n",
@@ -271,39 +240,6 @@
     "for fruit in fruits:\n",
     "    for adj in adjectives:\n",
     "        print('I love ' + adj + ' ' + fruit + '!!')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['I love big apples!!', 'I love big oranges!!', 'I love big grapes!!', 'I love big bananas!!']\n"
-     ]
-    }
-   ],
-   "source": [
-    "adjectives = ['big', 'juicy', 'delicious']\n",
-    "fruits = ['apples', 'oranges', 'grapes', 'bananas']\n",
-    "\n",
-    "bigfruits = []\n",
-    "juicyfruits = []\n",
-    "deliciousfruits = []\n",
-    "\n",
-    "for fruit in fruits:\n",
-    "    for adj in adjectives:\n",
-    "        if adj == 'big':\n",
-    "            bigfruits.append('I love ' + adj + ' ' + fruit + '!!')\n",
-    "        elif adj == 'juicy':\n",
-    "            juicyfruits.append('I love ' + adj + ' ' + fruit + '!!')\n",
-    "        elif adj == 'delicious':\n",
-    "            deliciousfruits.append('I love ' + adj + ' ' + fruit + '!!')\n",
-    "            \n",
-    "print(bigfruits)"
    ]
   },
   {
@@ -450,26 +386,11 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['apple', 'orange', 'grape', 'bananas']\n",
-      "['bananas']\n"
-     ]
-    }
-   ],
-=======
    "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
->>>>>>> b730767d90ac1d72ce498821b9b35dea0e042bd5
    "source": [
     "#Let's do another one!  This time with a conditional statement!\n",
     "fruits = ['apple', 'orange', 'grape', 'banana']\n",
@@ -481,8 +402,6 @@
     "    if fruit.startswith('b'):\n",
     "        pluralfruit = fruit + 's'\n",
     "        pluralfruits.append(pluralfruit)\n",
-    "    else:\n",
-    "        pluralfruits.append(fruit)\n",
     "    \n",
     "print(pluralfruits)\n",
     "\n",
