--- a/Module_3_Loops.ipynb
+++ b/Module_3_Loops.ipynb
@@ -33,9 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Define our favorite list\n",
@@ -49,9 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#We can also perform actions on each item in each iterations.\n",
@@ -124,9 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "a = 2\n",
@@ -139,9 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fruits = ['apples', 'oranges', 'grapes', 'bananas']\n",
@@ -164,9 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fruits = ['apples', 'oranges', 'grapes', 'bananas', 'zucchinis']\n",
@@ -187,9 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Same question but organized in a slightly different way\n",
@@ -212,6 +200,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Looping through dictionaries\n",
+    "\n",
+    "We can loop through any iterable.  So far, we've looped through lists, but we can also loop through other iterables like dictionaries and even strings!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['name', 'floor', 'fav_things', 'has_beard']\n",
+      "['Srinivas', 9, ['uracil', '2primehydroxyls', 'introns'], True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Our dictionary\n",
+    "instructor = {'name': 'Srinivas', 'floor': 9, 'fav_things': ['uracil', '2primehydroxyls', 'introns'], 'has_beard': True}\n",
+    "\n",
+    "#Get a list of all keys in the dictionary\n",
+    "#Equivalent to list(instructor.keys())\n",
+    "instructorkeys = [] #empty list\n",
+    "for k in instructor:\n",
+    "    instructorkeys.append(k)\n",
+    "    \n",
+    "#Get a list of all values in the dictionary\n",
+    "#Equivalent to list(instructor.values())\n",
+    "instructorvalues = [] #empty list\n",
+    "for k in instructor:\n",
+    "    instructorvalue = instructor.get(k)\n",
+    "    instructorvalues.append(instructorvalue)\n",
+    "    \n",
+    "print(instructorkeys)\n",
+    "print(instructorvalues)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Nested loops.\n",
     "\n",
     "Loops can also be nested, allowing simulatneous actions on multiple iterables.  For example:\n",
@@ -228,9 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "adjectives = ['big', 'juicy', 'delicious']\n",
@@ -258,9 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fruits = ['apples', 'oranges', 'grapes', 'bananas']\n",
@@ -276,9 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fruits = ['apples', 'oranges', 'grapes', 'bananas']\n",
@@ -307,9 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "i = 0\n",
@@ -332,9 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#PRESS INTERRUPT KERNEL AFTER RUNNING THIS BLOCK (IT'S THE ONE THAT LOOKS LIKE A SQUARE.)\n",
@@ -361,9 +383,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fruits = ['apple', 'orange', 'grape', 'banana']\n",
@@ -387,9 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Let's do another one!  This time with a conditional statement!\n",
@@ -414,9 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#One more time, this time with and if statement and an else statement\n",
@@ -573,7 +589,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -587,7 +603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
