--- a/Module_6_PandasII.ipynb
+++ b/Module_6_PandasII.ipynb
@@ -101,9 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -138,7 +136,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -157,7 +155,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -183,7 +181,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -197,7 +195,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -214,7 +212,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -227,7 +225,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -260,10 +258,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
+    "#Defining the dataframe\n",
+    "d = {'Gene': ['GeneA', 'GeneB', 'GeneC', 'GeneD', 'GeneE', 'GeneF'],\n",
+    "    'cond1exp' : [100, 50, 40, 20, 1, 1000],\n",
+    "    'cond2exp' : [200, 12.5, 45, 20, 4, 800],\n",
+    "    'log2FC' : [1, -2, 0.17, 0.00, 2.00, -0.32],\n",
+    "    'pvalue' : [6e-5, 2e-6, 0.55, 1.00, 0.15, 0.001]}\n",
+    "    \n",
+    "df = pd.DataFrame(data = d)\n",
+    "\n",
     "#Select rows whose expression in condition 1 is 100\n",
     "newdf = df.query('cond1exp == 100')\n",
     "\n",
@@ -274,7 +281,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -288,7 +295,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -314,11 +321,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
+    "#Defining the dataframe\n",
+    "d = {'Gene': ['GeneA', 'GeneB', 'GeneC', 'GeneD', 'GeneE', 'GeneF'],\n",
+    "    'cond1exp' : [100, 50, 40, 20, 1, 1000],\n",
+    "    'cond2exp' : [200, 12.5, 45, 20, 4, 800],\n",
+    "    'log2FC' : [1, -2, 0.17, 0.00, 2.00, -0.32],\n",
+    "    'pvalue' : [6e-5, 2e-6, 0.55, 1.00, 0.15, 0.001]}\n",
+    "    \n",
+    "df = pd.DataFrame(data = d)\n",
+    "\n",
     "#Add the expression in a third condition\n",
     "\n",
     "cond3expvalues = [20, 50, 10, 1000, 10, 2] #these are IN ORDER\n",
@@ -337,9 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -347,9 +359,10 @@
     "#A new log2FC column\n",
     "\n",
     "#First we need to get a list of the values that will make up our new column\n",
-    "cond1exp = df['cond1exp'] #this is a pandas series of the values in the cond1exp column\n",
+    "cond1exp = df['cond1exp'] #this is a pandas series of the values in the cond1exp column, essentially a one-column dataframe\n",
     "cond2exp = df['cond2exp']\n",
     "newlog2FCvalues = np.log2(cond1exp / cond2exp)\n",
+    "print(newlog2FCvalues)\n",
     "\n",
     "#Now add these values as a new column\n",
     "newdf = df.assign(newlog2FC = newlog2FCvalues)\n",
@@ -369,7 +382,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -386,6 +399,50 @@
     "#Oh no, df2 kept it's original index (0)! We want it to have a new index based on its position in the new df\n",
     "newdf = df.append(df2, ignore_index = True)\n",
     "print(newdf)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Iterating through rows\n",
+    "\n",
+    "Perhaps you want to iterate through rows, performing some kind of action on the data in each row.  To do this, we can use the **.iterrows()** method.  This returns a generator which yields both the index and the row."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Defining the dataframe\n",
+    "d = {'Gene': ['GeneA', 'GeneB', 'GeneC', 'GeneD', 'GeneE', 'GeneF'],\n",
+    "    'cond1exp' : [100, 50, 40, 20, 1, 1000],\n",
+    "    'cond2exp' : [200, 12.5, 45, 20, 4, 800],\n",
+    "    'log2FC' : [1, -2, 0.17, 0.00, 2.00, -0.32],\n",
+    "    'pvalue' : [6e-5, 2e-6, 0.55, 1.00, 0.15, 0.001]}\n",
+    "    \n",
+    "df = pd.DataFrame(data = d)\n",
+    "print(df)\n",
+    "\n",
+    "#For each row, print the cond1exp value and cond2exp value\n",
+    "for index, row in df.iterrows():\n",
+    "    print(row['cond1exp'], row['cond2exp'])\n",
+    "\n",
+    "#You can use this to add columns if you like\n",
+    "#Think of index as the rowname\n",
+    "for index, row in df.iterrows():\n",
+    "    totalexpression = row['cond1exp'] + row['cond2exp']\n",
+    "    #Add this as a new column named 'totexp' using .loc.\n",
+    "    if totalexpression < 50:\n",
+    "        df.loc[index, 'totexp'] = 'low'\n",
+    "    elif totalexpression >= 50 and totalexpression < 100:\n",
+    "        df.loc[index, 'totexp'] = 'medium'\n",
+    "    elif totalexpression > 100:\n",
+    "        df.loc[index, 'totexp'] = 'high'\n",
+    "    \n",
+    "print(df)"
    ]
   },
   {
@@ -436,7 +493,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -474,7 +531,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -525,7 +582,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -576,7 +633,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -643,7 +700,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -675,7 +732,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -706,7 +763,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -818,7 +875,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -877,7 +934,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -891,7 +948,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
