--- a/Module_3_Loops.ipynb
+++ b/Module_3_Loops.ipynb
@@ -33,7 +33,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Define our favorite list\n",
@@ -47,7 +49,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#We can also perform actions on each item in each iterations.\n",
@@ -120,7 +124,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a = 2\n",
@@ -133,7 +139,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fruits = ['apples', 'oranges', 'grapes', 'bananas']\n",
@@ -156,7 +164,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fruits = ['apples', 'oranges', 'grapes', 'bananas', 'zucchinis']\n",
@@ -177,7 +187,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Same question but organized in a slightly different way\n",
@@ -241,6 +253,94 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O\n",
+      "H\n",
+      " \n",
+      "W\n",
+      "H\n",
+      "A\n",
+      "T\n",
+      " \n",
+      "A\n",
+      " \n",
+      "S\n",
+      "T\n",
+      "R\n",
+      "I\n",
+      "N\n",
+      "G\n",
+      " \n",
+      "T\n",
+      "H\n",
+      "I\n",
+      "S\n",
+      " \n",
+      "I\n",
+      "S\n",
+      "!\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Loop through a string\n",
+    "\n",
+    "string = 'OH WHAT A STRING THIS IS!'\n",
+    "\n",
+    "for x in string:\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Keeping track of indicies when looping\n",
+    "\n",
+    "Occasionally, you might like to keep track of the index of an item as you are going through an iterable.  This can be done with the **enumerate()** function."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 apples\n",
+      "1 oranges\n",
+      "2 grapes\n",
+      "3 bananas\n",
+      "4 zucchinis\n",
+      "apples\n",
+      "grapes\n",
+      "zucchinis\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = ['apples', 'oranges', 'grapes', 'bananas', 'zucchinis']\n",
+    "\n",
+    "for index, fruit in enumerate(fruits):\n",
+    "    print(index, fruit)\n",
+    "    \n",
+    "    \n",
+    "#Get every other fruit, starting with the first one\n",
+    "for index, fruit in enumerate(fruits):\n",
+    "    if index %2 == 0:\n",
+    "        print(fruit)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -260,7 +360,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "adjectives = ['big', 'juicy', 'delicious']\n",
@@ -288,7 +390,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fruits = ['apples', 'oranges', 'grapes', 'bananas']\n",
@@ -304,7 +408,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fruits = ['apples', 'oranges', 'grapes', 'bananas']\n",
@@ -333,7 +439,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "i = 0\n",
@@ -356,7 +464,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#PRESS INTERRUPT KERNEL AFTER RUNNING THIS BLOCK (IT'S THE ONE THAT LOOKS LIKE A SQUARE.)\n",
@@ -383,7 +493,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fruits = ['apple', 'orange', 'grape', 'banana']\n",
@@ -407,7 +519,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Let's do another one!  This time with a conditional statement!\n",
@@ -432,7 +546,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#One more time, this time with and if statement and an else statement\n",
