Small Module 3 update

--- a/Module_3_Loops.ipynb
+++ b/Module_3_Loops.ipynb
@@ -304,7 +304,7 @@
    "source": [
     "### Keeping track of indicies when looping\n",
     "\n",
-    "Occasionally, you might like to keep track of the index of an item as you are going through an iterable.  This can be done with the **enumerate()** function."
+    "Occasionally, you might like to keep track of the index of an item as you are going through an iterable.  This can be done with the **enumerate()** function.  enumerate() returns a tuple of the form (index, item) during every iteration."
    ]
   },
   {
